{
  "version": 4,
  "terraform_version": "1.16.1",
  "serial": 19,
  "lineage": "773fcc79-7347-509d-6dcd-562cb841c4ae",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "web_vm_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/95f083af-2fe6-439f-892e-0270a32ea982/resourceGroups/dev-TemplateProjectSDA-6bi/providers/Microsoft.Network/networkInterfaces/dev-web-vm-nic-6bi",
            "internal_domain_name_suffix": "usmstrtblstejochvlexwszhof.cx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "web-vm-ip-1",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/95f083af-2fe6-439f-892e-0270a32ea982/resourceGroups/dev-TemplateProjectSDA-6bi/providers/Microsoft.Network/publicIPAddresses/dev-web-vm-publicip-6bi",
                "subnet_id": "/subscriptions/95f083af-2fe6-439f-892e-0270a32ea982/resourceGroups/dev-TemplateProjectSDA-6bi/providers/Microsoft.Network/virtualNetworks/dev-vnet-default-6bi/subnets/dev-vnet-default-6bi-websubnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus2",
            "name": "dev-web-vm-nic-6bi",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "dev-TemplateProjectSDA-6bi"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "dev-web-vm-nic-6bi",
            "resource_group_name": "dev-TemplateProjectSDA-6bi",
            "subscription_id": "95f083af-2fe6-439f-892e-0270a32ea982"
          },
          "dependencies": [
            "azurerm_public_ip.web_vm_publicip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/95f083af-2fe6-439f-892e-0270a32ea982/resourceGroups/dev-TemplateProjectSDA-6bi/providers/Microsoft.Network/networkSecurityGroups/dev-vnet-default-6bi-websubnet-nsg",
            "location": "eastus2",
            "name": "dev-vnet-default-6bi-websubnet-nsg",
            "resource_group_name": "dev-TemplateProjectSDA-6bi",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-22",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-443",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-80",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8501",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-8501",
                "priority": 130,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "dev-vnet-default-6bi-websubnet-nsg",
            "resource_group_name": "dev-TemplateProjectSDA-6bi",
            "subscription_id": "95f083af-2fe6-439f-892e-0270a32ea982"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "web_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/95f083af-2fe6-439f-892e-0270a32ea982/resourceGroups/dev-TemplateProjectSDA-6bi/providers/Microsoft.Network/networkSecurityGroups/dev-vnet-default-6bi-websubnet-nsg/securityRules/Rule-Port-80",
            "name": "Rule-Port-80",
            "network_security_group_name": "dev-vnet-default-6bi-websubnet-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "dev-TemplateProjectSDA-6bi",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "Rule-Port-80",
            "network_security_group_name": "dev-vnet-default-6bi-websubnet-nsg",
            "resource_group_name": "dev-TemplateProjectSDA-6bi",
            "subscription_id": "95f083af-2fe6-439f-892e-0270a32ea982"
          },
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/95f083af-2fe6-439f-892e-0270a32ea982/resourceGroups/dev-TemplateProjectSDA-6bi/providers/Microsoft.Network/networkSecurityGroups/dev-vnet-default-6bi-websubnet-nsg/securityRules/Rule-Port-443",
            "name": "Rule-Port-443",
            "network_security_group_name": "dev-vnet-default-6bi-websubnet-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "dev-TemplateProjectSDA-6bi",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "Rule-Port-443",
            "network_security_group_name": "dev-vnet-default-6bi-websubnet-nsg",
            "resource_group_name": "dev-TemplateProjectSDA-6bi",
            "subscription_id": "95f083af-2fe6-439f-892e-0270a32ea982"
          },
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/95f083af-2fe6-439f-892e-0270a32ea982/resourceGroups/dev-TemplateProjectSDA-6bi/providers/Microsoft.Network/networkSecurityGroups/dev-vnet-default-6bi-websubnet-nsg/securityRules/Rule-Port-22",
            "name": "Rule-Port-22",
            "network_security_group_name": "dev-vnet-default-6bi-websubnet-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "dev-TemplateProjectSDA-6bi",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "Rule-Port-22",
            "network_security_group_name": "dev-vnet-default-6bi-websubnet-nsg",
            "resource_group_name": "dev-TemplateProjectSDA-6bi",
            "subscription_id": "95f083af-2fe6-439f-892e-0270a32ea982"
          },
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "130",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "8501",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/95f083af-2fe6-439f-892e-0270a32ea982/resourceGroups/dev-TemplateProjectSDA-6bi/providers/Microsoft.Network/networkSecurityGroups/dev-vnet-default-6bi-websubnet-nsg/securityRules/Rule-Port-8501",
            "name": "Rule-Port-8501",
            "network_security_group_name": "dev-vnet-default-6bi-websubnet-nsg",
            "priority": 130,
            "protocol": "Tcp",
            "resource_group_name": "dev-TemplateProjectSDA-6bi",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "Rule-Port-8501",
            "network_security_group_name": "dev-vnet-default-6bi-websubnet-nsg",
            "resource_group_name": "dev-TemplateProjectSDA-6bi",
            "subscription_id": "95f083af-2fe6-439f-892e-0270a32ea982"
          },
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "web_vm_publicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "app1-vm-6bi",
            "fqdn": "app1-vm-6bi.eastus2.cloudapp.azure.com",
            "id": "/subscriptions/95f083af-2fe6-439f-892e-0270a32ea982/resourceGroups/dev-TemplateProjectSDA-6bi/providers/Microsoft.Network/publicIPAddresses/dev-web-vm-publicip-6bi",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.186.24.249",
            "ip_version": "IPv4",
            "location": "eastus2",
            "name": "dev-web-vm-publicip-6bi",
            "resource_group_name": "dev-TemplateProjectSDA-6bi",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "dev-web-vm-publicip-6bi",
            "resource_group_name": "dev-TemplateProjectSDA-6bi",
            "subscription_id": "95f083af-2fe6-439f-892e-0270a32ea982"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "websubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/95f083af-2fe6-439f-892e-0270a32ea982/resourceGroups/dev-TemplateProjectSDA-6bi/providers/Microsoft.Network/virtualNetworks/dev-vnet-default-6bi/subnets/dev-vnet-default-6bi-websubnet",
            "name": "dev-vnet-default-6bi-websubnet",
            "network_security_group_id": "/subscriptions/95f083af-2fe6-439f-892e-0270a32ea982/resourceGroups/dev-TemplateProjectSDA-6bi/providers/Microsoft.Network/networkSecurityGroups/dev-vnet-default-6bi-websubnet-nsg",
            "network_security_group_id_wo_version": 0,
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "dev-TemplateProjectSDA-6bi",
            "route_table_id_wo_version": 0,
            "virtual_network_name": "dev-vnet-default-6bi"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "dev-vnet-default-6bi-websubnet",
            "resource_group_name": "dev-TemplateProjectSDA-6bi",
            "subscription_id": "95f083af-2fe6-439f-892e-0270a32ea982",
            "virtual_network_name": "dev-vnet-default-6bi"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "web_subnet_nsg_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/95f083af-2fe6-439f-892e-0270a32ea982/resourceGroups/dev-TemplateProjectSDA-6bi/providers/Microsoft.Network/virtualNetworks/dev-vnet-default-6bi/subnets/dev-vnet-default-6bi-websubnet",
            "network_security_group_id": "/subscriptions/95f083af-2fe6-439f-892e-0270a32ea982/resourceGroups/dev-TemplateProjectSDA-6bi/providers/Microsoft.Network/networkSecurityGroups/dev-vnet-default-6bi-websubnet-nsg",
            "subnet_id": "/subscriptions/95f083af-2fe6-439f-892e-0270a32ea982/resourceGroups/dev-TemplateProjectSDA-6bi/providers/Microsoft.Network/virtualNetworks/dev-vnet-default-6bi/subnets/dev-vnet-default-6bi-websubnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_network_security_rule.web_nsg_rule_inbound",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "c62999a4-5c61-44a6-b847-aac97b4b2775",
            "id": "/subscriptions/95f083af-2fe6-439f-892e-0270a32ea982/resourceGroups/dev-TemplateProjectSDA-6bi/providers/Microsoft.Network/virtualNetworks/dev-vnet-default-6bi",
            "location": "eastus2",
            "name": "dev-vnet-default-6bi",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "dev-TemplateProjectSDA-6bi",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/95f083af-2fe6-439f-892e-0270a32ea982/resourceGroups/dev-TemplateProjectSDA-6bi/providers/Microsoft.Network/virtualNetworks/dev-vnet-default-6bi/subnets/dev-vnet-default-6bi-websubnet",
                "name": "dev-vnet-default-6bi-websubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/95f083af-2fe6-439f-892e-0270a32ea982/resourceGroups/dev-TemplateProjectSDA-6bi/providers/Microsoft.Network/networkSecurityGroups/dev-vnet-default-6bi-websubnet-nsg"
              }
            ],
            "tags": {
              "environment": "dev"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "dev-vnet-default-6bi",
            "resource_group_name": "dev-TemplateProjectSDA-6bi",
            "subscription_id": "95f083af-2fe6-439f-892e-0270a32ea982"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        }
      ]
    }
  ]
}